--- a/content/posts/2024-11-15_Guide_complet_des_complements_alimentaires_dans_le_sport.mdx
+++ b/content/posts/2024-11-15_Guide_complet_des_complements_alimentaires_dans_le_sport.mdx
@@ -14,7 +14,7 @@ coverUrl: https://images.unsplash.com/photo-1707305311532-73bd64624a07?q=80&w=29
 status: published
 ---
 
-## Les compléments alimentaires dans le sport : Guide complet
+## Guide complet des compléments alimentaires dans le sport 
 
 ### Introduction
 
