--- a/content/posts/2024-11-14_La-salle-de-sport-quand-on-debute.mdx
+++ b/content/posts/2024-11-14_La-salle-de-sport-quand-on-debute.mdx
@@ -10,7 +10,7 @@ tags:
   - Fitness
   - Entrainement
   - Exercices
-coverUrl: https://images.unsplash.com/photo-1707305311532-73bd64624a07?q=80&w=2970&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
+coverUrl: '/images/salle-de-sport.jpg'
 status: published
 ---
 ## La salle de sport quand on débute 
